# faster-app

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  CODE_REVIEW_SUMMARY.md  CONTRIBUTING.md  Makefile  PAGINATION_GUIDE.md  PROJECT_ANALYSIS.md  README.md  TODO.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.cursor/rules/: no-ai.mdc
.github/workflows/: ci.yml  publish-to-pypi.yml
about/license/: index.html
api/app/: index.html
api/models/: index.html
api/overview/: index.html
api/routes/: index.html
api/utils/: index.html
apps/demo/: models.py  routes.py
cli/app/: index.html
cli/custom/: index.html
cli/db/: index.html
cli/server/: index.html
docs/: index.md
docs/about/: changelog.md
docs/cli/: app.md  custom.md  db.md  server.md
docs/design/: drf-like-refactoring.md  viewset-instance-management.md  viewset-optimization-summary.md  viewset-optimization.md
docs/examples/: config_lifespan.py.example  config_settings_lifespan.py.example  custom_lifespan_advanced.py.example
docs/getting-started/: index.md  quickstart.md  structure.md
docs/guides/: custom-middleware-example.md  exceptions.md  lifespan.md  logging.md  middleware-config.md  viewsets.md
docs/stylesheets/: extra.css
faster_app/: __init__.py  app.py  cli.py  main.py
faster_app/apps/: __init__.py  base.py  discover.py  registry.py
faster_app/apps/demo/: auth_routes.py  commands.py  lifecycle.py  models.py  routes.py  schemas.py  tasks.py
faster_app/commands/: base.py  discover.py
faster_app/commands/builtins/: agent.py  app.py  db.py  deps.py  server.py
faster_app/exceptions/: __init__.py  base.py  handlers.py  manager.py  types.py
faster_app/lifespan/: __init__.py  apps.py  combine.py  database.py  defaults.py  discover.py  manager.py
faster_app/middleware/: discover.py
faster_app/middleware/builtins/: custom.py  middlewares.py
faster_app/models/: __init__.py  base.py  discover.py
faster_app/public/: .env.example  Makefile  launch.json
faster_app/routes/: base.py  discover.py  validator.py
faster_app/routes/builtins/: defaults.py  swagger.py
faster_app/settings/: __init__.py  config.py  discover.py  logging.py
faster_app/settings/builtins/: orm.py  settings.py
faster_app/skills/: README.md
faster_app/utils/: __init__.py  crud.py  db.py  decorators.py  dependency.py  discover.py  logger.py  pagination.py  response.py
faster_app/viewsets/: __init__.py  actions.py  authentication.py  base.py  cache.py  filters.py  mixins.py  permissions.py  routers.py  throttling.py  viewsets.py
getting-started/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
getting-started/structure/: index.html
search/: search_index.json
stylesheets/: extra.css
tests/: README.md  conftest.py  test_commands.py  test_init.py  test_models.py  test_pagination.py  test_response.py
